# bayesian_holidays

./: LICENSE  README.md  pyproject.toml  setup.py
bayesian_holidays/src/: fit_holiday_model.py  holiday_model  holiday_model.py  holiday_model.stan  new_holiday_model  new_holiday_model.stan  plot_utils.py  utils.py
bayesian_holidays/src/data/: us_chocolate.csv
notebooks/: holiday_notebook.ipynb
src/: utils.py
src/bayesian_holidays/: holiday_model.stan  plot_utils.py  utils.py
src/bayesian_holidays/data/: bangladesh_ramadan.csv
